# domain/legalentity.go
@@ -7,12 +7,12 @@ import (
 )
 
 type LegalEntity struct {
-	UUID           uuid.UUID `json:"uuid"`
-	Name           string    `json:"name"`
-	FederationUUID uuid.UUID `json:"federation_uuid"`
-	CreatedBy      string    `json:"created_by"`
-	CreatedAt      time.Time `json:"created_at"`
-	UpdatedAt      time.Time `json:"updated_at"`
+	UUID         uuid.UUID     `json:"uuid"`
+	Name         string        `json:"name"`
+	BankAccounts []BankAccount `json:"bank_accounts" gorm:"foreignKey:LegalEntityUUID;references:UUID"`
+	CreatedBy    string        `json:"created_by"`
+	CreatedAt    time.Time     `json:"created_at"`
+	UpdatedAt    time.Time     `json:"updated_at"`
 }
 
 type LegalEntityUpdate struct {
