# internal/legalentities/main.go
@@ -5,17 +5,11 @@ import (
 	"github.com/krisch/crm-backend/domain"
 )
 
-type LegalEntitiesRepository interface {
-	CreateLegalEntity(legalEntity *domain.LegalEntity) error
-	GetAllLegalEntities() ([]domain.LegalEntity, error)
-	UpdateLegalEntity(legalEntity domain.LegalEntity) error
-	DeleteLegalEntity(legalEntityUUID uuid.UUID) error
-}
 type Service struct {
-	repo LegalEntitiesRepository
+	repo *Repository
 }
 
-func NewService(repo LegalEntitiesRepository) *Service {
+func NewService(repo *Repository) *Service {
 	return &Service{
 		repo: repo,
 	}
@@ -35,4 +29,29 @@ func (s *Service) UpdateLegalEntity(legalEntity domain.LegalEntity) error {
 
 func (s *Service) DeleteLegalEntity(legailEntityUUID uuid.UUID) error {
 	return s.repo.DeleteLegalEntity(legailEntityUUID)
+}
+
+func (s *Service) CreateBankAccount(bankAccount domain.BankAccount) error {
+	return s.repo.CreateBankAccount(bankAccount)
+}
+
+func (s *Service) GetAllBankAccounts() ([]domain.BankAccount, error) {
+	return s.repo.GetAllBankAccounts()
+}
+
+func (s *Service) UpdateBankAccount(bankAccount domain.BankAccount) error {
+	return s.repo.UpdateBankAccount(bankAccount)
+}
+
+func (s *Service) DeleteBankAccount(bankAccountUUID uuid.UUID) error {
+	return s.repo.DeleteBankAccount(bankAccountUUID)
+}
+
+func (s *Service) GetLegalEntityWithAccounts(entityUUID uuid.UUID) (*domain.LegalEntity, error) {
+	return s.repo.GetLegalEntityWithAccounts(entityUUID)
+}
+
+// Добавляем в Service (legalentities/main.go).
+func (s *Service) GetBankAccountByUUID(bankAccountUUID uuid.UUID) (*domain.BankAccount, error) {
+	return s.repo.GetBankAccountByUUID(bankAccountUUID)
 }
